--- a/NCloud/NCloud/Views/Shared/Components/SharedDetailsTable/Table.cshtml
+++ b/NCloud/NCloud/Views/Shared/Components/SharedDetailsTable/Table.cshtml
@@ -116,7 +116,7 @@
                                             Public
                                         </td>
                                         <td>
-                                            @if (item.IsSharedInApp)
+                                            @if (item.IsConnectedToApp)
                                             {
                                                 <span>✔</span>
                                             }
