stareted to implement problem direcrory sharing

--- a/NCloud/NCloud/Views/Shared/Components/SharedDetailsTable/Table.cshtml
+++ b/NCloud/NCloud/Views/Shared/Components/SharedDetailsTable/Table.cshtml
@@ -1,4 +1,4 @@
-﻿@model DriveDetailsViewModel
+﻿@model SharingDetailsViewModel
 
 <table class="table">
     <thead>
@@ -16,48 +16,50 @@
                         <details>
                             <summary>
                                 <span id="iconforitemtype">
-                                    <img src="@item.IconPath" width=" 20" height="20" class="item align-bottom">
+                                    <img src="@item.IconPath" width="20" height="20" class="item align-bottom">
                                 </span>
-                                <a asp-action="Details" asp-route-folderName="@item.SharedName" class="itemlink">@item.SharedName</a>
+                                <a asp-action="Details" asp-route-folderName="@(item.Info is not null ? item.Info.Name : item.SharedName)" class="itemlink">@item.SharedName</a>
                             </summary>
-                            <fieldset class="border border-dark p-2 m-2 rounded">
-                                <legend class="btn btn-outline-primary rounded-pill w-auto">Details</legend>
-                                <table class="table table-striped rounded">
-                                    <tr>
-                                        <td>
-                                            Created By
-                                        </td>
-                                        <td>
-                                            No Data
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            Created Time
-                                        </td>
-                                        <td>
-                                            @* @item.Info.CreationTime *@
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            Last Modified Time
-                                        </td>
-                                        <td>
-                                            @* @item.Info.LastWriteTime *@
-                                        </td>
-                                    </tr>
-                                </table>
-                            </fieldset>
-                            @* @if (item.Owner == User.Identity!.Name&& ViewBag.CanUseActions is not null && ViewBag.CanUseActions == true)
+                            @if (item.Info is not null)
                             {
-                                <div class="d-flex justify-content-end">
-                                    <div class="btn-group mx-2" role="group">
-                                        <button type="button" class="btn btn-primary"><a asp-controller="Sharing" asp-action="Settings" asp-route-id="@item.Info.Name"><img src="~/utilities/gear.svg" width=" 20" height="20" class="rounded-circle align-middle" /></a></button>
-                                        <button type="button" class="btn btn-danger"><a asp-controller="Sharing" asp-action="HideFolder" asp-route-id="@item.Info.Name"><img src="~/utilities/disconnect.svg" width=" 20" height="20" class="rounded-circle align-middle" /></a></button>
+                                <fieldset class="border border-dark p-2 m-2 rounded">
+                                    <legend class="btn btn-outline-primary rounded-pill w-auto">Details</legend>
+                                    <table class="table table-striped rounded">
+                                        <tr>
+                                            <td>
+                                                Created By
+                                            </td>
+                                            <td>
+                                                @Model.Owner
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>
+                                                Created Time
+                                            </td>
+                                            <td>
+                                                @item.Info.CreationTime
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>
+                                                Last Modified Time
+                                            </td>
+                                            <td>
+                                                @item.Info.LastWriteTime
+                                            </td>
+                                        </tr>
+                                    </table>
+                                </fieldset>
+                                @if (Model.Owner == User.Identity!.Name)
+                                {
+                                    <div class="d-flex justify-content-end">
+                                        <div class="btn-group mx-2" role="group">
+                                            <a class="btn btn-primary" asp-controller="Sharing" asp-action="DisconnectDirectoryFromApp" asp-route-id="@item.Info.Name"><img src="~/utilities/noshare.svg" width=" 20" height="20" class="rounded-circle align-middle" /></a>
+                                        </div>
                                     </div>
-                                </div>
-                            } *@
+                                }
+                            }
                         </details>
                     </td>
                 </tr>
@@ -72,71 +74,58 @@
                         <details>
                             <summary>
                                 <span id="iconforitemtype">
-                                    <img src="@item.IconPath" width=" 20" height="20" class="item align-bottom">
+                                    <img src="@item.IconPath" width="20" height="20" class="item align-bottom">
                                 </span>
-                                <span class="itemlink">@item.SharedName</span>
+                                <span class="itemlink">@(item.Info is not null ? item.Info.Name : item.SharedName)</span>
                             </summary>
-                            <fieldset class="border border-dark p-2 m-2 rounded">
-                                <legend class="btn btn-outline-primary rounded-pill w-auto">Details</legend>
-                                <table class="table table-striped rounded">
-                                    <tr>
-                                        <td>
-                                            Created By
-                                        </td>
-                                        <td>
-                                            No Data
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            Created Time
-                                        </td>
-                                        <td>
-                                            @* @item.Info.CreationTime *@
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            Last Modified Time
-                                        </td>
-                                        <td>
-                                            @* @item.Info.LastWriteTime *@
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            Size
-                                        </td>
-                                        <td>
-                                            @* @item.Info.Length Bytes *@
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            Public
-                                        </td>
-                                        <td>
-                                            @if (item.IsConnectedToApp)
-                                            {
-                                                <span>✔</span>
-                                            }
-                                            else
-                                            {
-                                                <span>❌</span>
-                                            }
-                                        </td>
-                                    </tr>
-                                </table>
-                            </fieldset>
-                            @* @if (item.Owner == User.Identity!.Name && ViewBag.CanUseActions is not null && ViewBag.CanUseActions == true)
+                            @if (item.Info is not null)
                             {
-                                <div class="d-flex justify-content-end">
-                                    <div class="btn-group mx-2" role="group">
-                                        <button type="button" class="btn btn-primary"><a asp-controller="Sharing" asp-action="Settings" asp-route-id="@item.Info.Name"><img src="~/utilities/gear.svg" width=" 20" height="20" class="rounded-circle align-middle" /></a></button>
-                                        <button type="button" class="btn btn-danger"><a asp-controller="Sharing" asp-action="HideFile" asp-route-id="@item.Info.Name"><img src="~/utilities/disconnect.svg" width=" 20" height="20" class="rounded-circle align-middle" /></a></button>
+                                <fieldset class="border border-dark p-2 m-2 rounded">
+                                    <legend class="btn btn-outline-primary rounded-pill w-auto">Details</legend>
+                                    <table class="table table-striped rounded">
+                                        <tr>
+                                            <td>
+                                                Created By
+                                            </td>
+                                            <td>
+                                                @Model.Owner
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>
+                                                Created Time
+                                            </td>
+                                            <td>
+                                                @item.Info.CreationTime
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>
+                                                Last Modified Time
+                                            </td>
+                                            <td>
+                                                @item.Info.LastWriteTime
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>
+                                                Size
+                                            </td>
+                                            <td>
+                                                @item.Info.Length Bytes
+                                            </td>
+                                        </tr>
+                                    </table>
+                                </fieldset>
+                                @if (Model.Owner == User.Identity!.Name)
+                                {
+                                    <div class="d-flex justify-content-end">
+                                        <div class="btn-group mx-2" role="group">
+                                            <a class="btn btn-primay" asp-controller="Sharing" asp-action="DisconnectFileFromApp" asp-route-id="@item.Info.Name"><img src="~/utilities/noshare.svg" width=" 20" height="20" class="rounded-circle align-middle" /></a>
+                                        </div>
                                     </div>
-                                </div>
-                            } *@
+                                }
+                            }
                         </details>
                     </td>
                 </tr>
