--- a/NCloud/NCloud/Views/Shared/Components/SharingDetailsTable/Table.cshtml
+++ b/NCloud/NCloud/Views/Shared/Components/SharingDetailsTable/Table.cshtml
@@ -20,45 +20,13 @@
                                 </span>
                                 <a asp-action="Details" asp-route-folderName="@(item.Info is not null ? item.Info.Name : item.SharedName)" class="itemlink">@(item.Info is not null ? item.Info.Name : item.SharedName)</a>
                             </summary>
-                            @if (item.Info is not null)
+                            @if (Model.Owner)
                             {
-                                <fieldset class="border border-dark p-2 m-2 rounded">
-                                    <legend class="btn btn-outline-primary rounded-pill w-auto">Details</legend>
-                                    <table class="table table-striped rounded">
-                                        <tr>
-                                            <td>
-                                                Created By
-                                            </td>
-                                            <td>
-                                                @Model.Owner
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>
-                                                Created Time
-                                            </td>
-                                            <td>
-                                                @item.Info.CreationTime
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>
-                                                Last Modified Time
-                                            </td>
-                                            <td>
-                                                @item.Info.LastWriteTime
-                                            </td>
-                                        </tr>
-                                    </table>
-                                </fieldset>
-                                @if (Model.Owner == User.Identity!.Name)
-                                {
-                                    <div class="d-flex justify-content-end">
-                                        <div class="btn-group mx-2" role="group">
-                                            <a class="btn btn-primary" asp-controller="Sharing" asp-action="DisconnectDirectoryFromApp" asp-route-id="@item.Info.Name"><img src="~/utilities/noshare.svg" width=" 20" height="20" class="rounded-circle align-middle" /></a>
-                                        </div>
+                                <div class="d-flex justify-content-end">
+                                    <div class="btn-group me-2 my-3" role="group">
+                                        <a class="btn btn-primary" asp-controller="Sharing" asp-action="DisconnectDirectoryFromApp" asp-route-id="@item.SharedName"><img src="~/utilities/noshare.svg" width=" 20" height="20" class="rounded-circle align-middle" /></a>
                                     </div>
-                                }
+                                </div>
                             }
                         </details>
                     </td>
@@ -78,53 +46,13 @@
                                 </span>
                                 <span class="itemlink">@(item.Info is not null ? item.Info.Name : item.SharedName)</span>
                             </summary>
-                            @if (item.Info is not null)
+                            @if (Model.Owner)
                             {
-                                <fieldset class="border border-dark p-2 m-2 rounded">
-                                    <legend class="btn btn-outline-primary rounded-pill w-auto">Details</legend>
-                                    <table class="table table-striped rounded">
-                                        <tr>
-                                            <td>
-                                                Created By
-                                            </td>
-                                            <td>
-                                                @Model.Owner
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>
-                                                Created Time
-                                            </td>
-                                            <td>
-                                                @item.Info.CreationTime
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>
-                                                Last Modified Time
-                                            </td>
-                                            <td>
-                                                @item.Info.LastWriteTime
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>
-                                                Size
-                                            </td>
-                                            <td>
-                                                @item.Info.Length Bytes
-                                            </td>
-                                        </tr>
-                                    </table>
-                                </fieldset>
-                                @if (Model.Owner == User.Identity!.Name)
-                                {
-                                    <div class="d-flex justify-content-end">
-                                        <div class="btn-group mx-2" role="group">
-                                            <a class="btn btn-primay" asp-controller="Sharing" asp-action="DisconnectFileFromApp" asp-route-id="@item.Info.Name"><img src="~/utilities/noshare.svg" width=" 20" height="20" class="rounded-circle align-middle" /></a>
-                                        </div>
+                                <div class="d-flex justify-content-end">
+                                    <div class="btn-group me-2 my-3" role="group">
+                                        <a class="btn btn-primay" asp-controller="Sharing" asp-action="DisconnectFileFromApp" asp-route-id="@item.SharedName"><img src="~/utilities/noshare.svg" width=" 20" height="20" class="rounded-circle align-middle" /></a>
                                     </div>
-                                }
+                                </div>
                             }
                         </details>
                     </td>
